# cookiecutter-pypackage-access

./: COPYRIGHT  README.md  cookiecutter.json
docs/: prompts.rst
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml  requirements_dev.txt
{{cookiecutter.project_slug}}/.conda/: environment.yml  meta.yml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/ci/: environment-3.10.yml  environment-3.11.yml  environment-3.12.yml  environment-3.13.yml
{{cookiecutter.project_slug}}/docs/: conf.py  installation.rst
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
